# CanisMajoris

./: .gitignore  README.md
Canis Majoris/: CMakeLists.txt  Canis Majoris.opensdf  Canis Majoris.sdf.REMOVED.git-id  Canis Majoris.sln  Performance2.psess  SetMeUpScotty.bat
Canis Majoris/Debug/: Canis Majoris.exp  Canis Majoris.lib  Engine.exp  Engine.lib  Game.exp  Game.ilk  Game.lib  stdout.txt
Canis Majoris/Engine/: CMakeLists.txt  Engine.filters  Engine.vcxproj  Macros.props
Canis Majoris/Engine/Debug/: vc120.idb
Canis Majoris/Engine/include/: EngineDllExport.h
Canis Majoris/Game/: Game.vcxproj  Game.vcxproj.filters
Canis Majoris/Game/Debug/: Game.vcxprojResolveAssemblyReference.cache  vc120.idb
Canis Majoris/Game/Release/: Game.vcxprojResolveAssemblyReference.cache
Canis Majoris/Game/src/: main.cpp
Canis Majoris/Procyon/: Procyon.aps  Procyon.includes  Procyon.pro  Procyon.vcxproj.filters  Procyon_ToolBoxBtn.qml
Canis Majoris/Procyon - Copy/: Procyon.vcxproj  Procyon_DBGScrollTextComponent.qml  Procyon_Toolbox.qml  main.qml  procyon.cpp  procyon.qrc  procyon.ui
Canis Majoris/Procyon/GeneratedFiles/: qrc_procyon.cpp
Canis Majoris/TestFramework/: ReadMe.txt  TestFramework.cpp  TestFramework.vcxproj  TestFramework.vcxproj.filters
Canis Majoris/TestFramework/Debug/: TestFramework.vcxprojResolveAssemblyReference.cache  vc120.idb
Canis Majoris/TestFramework/include/: UnitTestGroup.h
Canis Majoris/TestFramework/src/: UnitTestGroup.cpp
Canis Majoris/build-Procyon-Desktop_Qt_5_4_0_MSVC2013_64bit-Debug/: Makefile  Makefile.Debug  Makefile.Release
Canis Majoris/build-Procyon-Desktop_Qt_5_4_0_MSVC2013_64bit-Debug/debug/: qrc_qml.cpp
Canis Majoris/docs/: doxyfile
Canis Majoris/docs/html/: _constants_8h_source.html  _edge_8h_source.html  _i_o___o_b_j_loader_8h_source.html  _mesh_8h_source.html  _mesh_container_8h_source.html  _message_table_8h_source.html  _triangle_8h_source.html  _vector3_8h_source.html  _vertex_8h_source.html  annotated.html  class_core_1_1_i_o_1_1_model_file-members.html  class_core_1_1_i_o_1_1_model_file.html  class_core_1_1_renderer_1_1_core_utils_1_1_edge-members.html  class_core_1_1_renderer_1_1_core_utils_1_1_edge.html  class_core_1_1_renderer_1_1_core_utils_1_1_mesh-members.html  class_core_1_1_renderer_1_1_core_utils_1_1_mesh.html  class_core_1_1_renderer_1_1_core_utils_1_1_triangle-members.html  class_core_1_1_renderer_1_1_core_utils_1_1_triangle.html  class_core_1_1_renderer_1_1_core_utils_1_1_vertex-members.html  class_core_1_1_renderer_1_1_core_utils_1_1_vertex.html  class_mesh_container-members.html  class_mesh_container.html  class_renderer_1_1_core_utils_1_1_triangle-members.html  class_renderer_1_1_core_utils_1_1_triangle.html  class_vector3-members.html  class_vector3.html  classes.html  dir_15908667432010a37e4cff36718e4b13.html  dir_15908667432010a37e4cff36718e4b13_dep.map  dir_27217b792d77457bb7837c4b08f79679.html  dir_27217b792d77457bb7837c4b08f79679_dep.map  dir_3042fcd6a7e435d3d814e49796fcb267.html  dir_3042fcd6a7e435d3d814e49796fcb267_dep.map  dir_6c321d5a4317f9f94347cfd0e9a4b55b.html  dir_6c321d5a4317f9f94347cfd0e9a4b55b_dep.map  (+21 more)
CanisMajoris/Engine/: CMakeLists.txt  Engine.filters  Engine.smproj  Engine.vcxproj  Macros.props
(+1039 files in other folders)
